k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: devsecops
spec:
  type: ClusterIP
  selector:
    app: devsecops-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
